--- a/src/bootstrap-imports.scss
+++ b/src/bootstrap-imports.scss
@@ -23,13 +23,18 @@ $spacers: (
 @import '../node_modules/bootstrap/scss/utilities/flex';
 @import '../node_modules/bootstrap/scss/utilities/sizing';
 @import '../node_modules/bootstrap/scss/utilities/spacing';
+@import '../node_modules/bootstrap/scss/utilities/position';
 
 @import '../node_modules/bootstrap/scss/bootstrap-grid';
 
-@import './common/style-guide/colors';
+@import './common/style-guide';
 
 .container-fluid {
   padding: 0;
+}
+
+.bold {
+  font-family: $semibold-font !important;
 }
 
 @each $size, $gap in $spacers {
